# literate-wordle

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  diagram.plantuml  pyproject.toml  wordle.html  wordle.org
docs/source/: conf.py  features.md  index.rst  readme.md  wordle.md  wordle_sources.md
docs/source/_static/: wordle.html
docs/source/_templates/: gherkin_feature.md.j2  gherkin_feature.rst.j2
features/: another.feature  basic.feature  checking_guess_valid_word.feature  command_line_entrypoint.feature  pick_answer_word.feature  scoring_guess.feature  track_guesses.feature
src/literate_wordle/: __init__.py  cli.py  game.py  guess.py  main.py  sqlite_solve.py  wordle.py  words.py
src/literate_wordle/assets/: __init__.py
src/literate_wordle/db/: __init__.py  find_solution.sql  tables.sql
tests/: __init__.py  test_checking_guess_valid_word.py  test_dummy.py  test_pick_word.py  test_scoring_guess.py  test_track_guess_number.py  test_version.py
