[tool.poetry]
name = "literate_wordle"
version = "0.1.0"
description = "Wordle implementation in literate programming"
authors = ["Jb Doyon <jb@jiby.tech>"]
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = [
  "wordle",
  "literate-programming",
  "TDD",
  "BDD",
  "gherkin",
]


[tool.poetry.dependencies]
python = ">=3.8,<3.11"

# [tool.poetry.scripts]
# pywordle = 'literate_wordle.cli.run"

[tool.poetry.dev-dependencies]
# Various test
pytest = "^6.1.2"
pytest-cov = "^3.0.0"
pytest-clarity = "^1.0.1"

# Documentation
Sphinx = "^4.3.1"
sphinx-rtd-theme = "^1.0.0"
myst-parser = "^0.15.2"
sphinx-autoapi = "^1.8.4"
sphinx-collections = "^0.0.1"
sphinxcontrib-needs = "^0.7.5"
sphinxcontrib-plantuml = "^0.22"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Make isort work with Black
# Avoids conflicting imports
# As per https://pycqa.github.io/isort/docs/configuration/black_compatibility/#using-a-config-file-such-as-isortcfg
[tool.isort]
profile = "black"
multi_line_output = 3

# Avoid pointless warning about performance hit of f-string in loggers
[tool.pylint.message_control]
disable = ["logging-fstring-interpolation"]


[tool.pytest.ini_options]
addopts = """-vv \
    --color=yes \
    --doctest-modules \
    --junit-xml=test_results/results.xml
    --cov=literate_wordle \
    --cov-report=xml:test_results/coverage.xml \
    --cov-report=html:test_results/coverage.html \
    --cov-report=term"""
norecursedirs = ".git build docs"
