[tool.poetry]
name = "literate_wordle"
version = "1.1.0"
description = "Wordle implementation in literate programming"
authors = ["Jb Doyon <jb@jiby.tech>"]
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = [
  "wordle",
  "literate-programming",
  "TDD",
  "BDD",
  "gherkin",
]

[tool.poetry.dependencies]
# While I wouldn't mind using Python 3.11 onwards, sphinxcontrib-needs, a
# dev-dep, has conflicts with it. So we restrict our allowed Python...
python = ">=3.9,<3.11"
# sqlite3 library, compiled and packaged by third-party to be up to date.
pysqlite3-binary = "*"
# This project doesn't have runtime dependencies, just standard library.

[tool.poetry.scripts]
pywordle = "literate_wordle.cli:main"

# Note that I'm quite lax with version pinning:
# I don't really _want_ to pin specific versions here, because apart from "good
# enough for current features", I don't have incompatibilities, and am happy to
# pick up new versions. Remember that because we committed poetry.lock file, we
# have exact versions of dependencies locked, so the below is just our
# "intentions" regarding versions.
[tool.poetry.dev-dependencies]
pytest = ">=6.1.2"
pytest-cov = ">=3.0.0"
pytest-clarity = ">=1.0.1"

# Documentation
Sphinx = ">=4.5.0"
sphinx-rtd-theme = ">=1.0.0"
myst-parser = ">=0.15.2"
sphinx-autoapi = ">=1.8.4"
sphinx-collections = ">=0.0.1"
# Needs is nice, but brings in numpy + matplotlib etc,  which we don't need.
# See the issue I raised + PR, waiting on maintainer:
# https://github.com/useblocks/sphinxcontrib-needs/issues/222
sphinxcontrib-needs = ">=0.7.8"
sphinxcontrib-plantuml = ">=0.22"
# Note: linters etc are not defined here, but in .pre-commit-config.yaml
# The "pre-commit" tool will install/manage each in its isolated virtualenv

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Make isort work with Black
# Avoids conflicting imports
# As per https://pycqa.github.io/isort/docs/configuration/black_compatibility/#using-a-config-file-such-as-isortcfg
[tool.isort]
profile = "black"
multi_line_output = 3

# Set the flags we're using most of the time, to make "poetry run pytest"
# do the right thing right away
[tool.pytest.ini_options]
addopts = """-vv \
    --color=yes \
    --junit-xml=test_results/results.xml
    --cov=literate_wordle \
    --cov-report=xml:test_results/coverage.xml \
    --cov-report=html:test_results/coverage.html \
    --cov-report=term"""
# No doctests in this package, and doctest detection interacts with
# CharacterScore string-enum's classmethod/property: disable!
#    --doctest-modules \

# Don't let conf.py and other irrelevant folders be detectable as tests by pytest
norecursedirs = ".git build docs"
